Added git log to writeup

--- a/homework3/writeup.tex
+++ b/homework3/writeup.tex
@@ -151,7 +151,16 @@ lsmod
     		\hline
     		Date & Author & Description \\
     		\hline
-    		yyyy-mm-dd & First Last & Text \\
+        2017-11-14 & Zach Lerew & Added design and what did you learn sections \\
+        2017-11-14 & Zach Lerew & More writeup styling, references section added \\
+        2017-11-14 & Zach Lerew & Writeup styling complies with guidelines, expanded abstract and design \\
+        2017-11-13 & Zach Lerew & Added testing details to writeup \\
+        2017-11-13 & Rohan Barve & Added notes for setup to be added to writeup \\
+        2017-11-13 & Rohan Barve & Added working copy of block device driver from pat patterson \\
+        2017-11-12 & Rohan Barve & Answered questsions in writeup \\
+        2017-11-12 & Rohan Barve & Added writeup outline from hw2 \\
+        2017-11-12 & Rohan Barve & Adding makefile for compiling and building kernel module and device driver itself \\
+        2017-11-03 & Zach Lerew & Added hw3 initial directory \\
     		\hline
     	\end{tabular}
   	\end{center}
