Modified build instructions for module

--- a/homework3/writeup.tex
+++ b/homework3/writeup.tex
@@ -85,7 +85,7 @@ qemu-system-i386 -redir tcp:<PORT>::22 -nographic -kernel linux-yocto-3.19/arch/
 
 \item Build module
 \begin{lstlisting}
-cd <path_to_module>
+cd linux-yocto-3.19/sbd/
 make
 \end{lstlisting}
 
