Modifications to abstract for writeup

--- a/homework3/writeup.tex
+++ b/homework3/writeup.tex
@@ -34,9 +34,8 @@
 
 	\begin{titlingpage}
 		\begin{abstract}
-			\noindent Homework 3 involves building an encrypted block device driver using the Linux crypto API and a reference from LDD3.
-      The module's task is to encrypt and decrypt data as it is written and read from physical storage.
-      The module will be designed, developed, transferred to a running VM using SCP, inserted into the module list, and then tested.
+			\noindent Homework 3 involved building an encrypted block device driver using the Linux crypto API and a reference sample device driver.  Resources such as LDD3 were utilized to gain an understanding of the device driver interface and a working version of the driver was found using online resources. The driver in its current state was not compatible with the existing yocto kernel version and fixes had to be made in order to get it to build correctly. The module  was then copied into a running instance of a virtual machine using scp  with networking enabled. Next it was inserted using insmod and related commands were run to test the module for correctness.
+     
 		\end{abstract}
 	\end{titlingpage}
 
